--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ before_install:
   - sudo apt-get install emboss
   - sudo apt-get install bedtools
   - sudo apt-get install bioperl
+  - sudo apt-get install libgd-perl
+  
 
 
 # Use this to install any prerequisites or dependencies necessary to run your build.
