--- a/.travis.yml
+++ b/.travis.yml
@@ -9,18 +9,19 @@ before_install:
   - sudo apt-get install emboss
   - sudo apt-get install bedtools
   - sudo apt-get install bioperl
-  - sudo apt-get install libgd-perl
+  - sudo apt-get install libgd
+  - sudo apt-get install libgd-dev
   
 
 
 # Use this to install any prerequisites or dependencies necessary to run your build.
 install:
+  - cpanm GD
+  - cpanm GD::SVG
   - cpanm Bio::Graphics
   - cpanm LWP::Perl
   - cpanm LWP::Simple
   - cpanm XML::Simple
-  - cpanm GD
-  - cpanm GD::SVG
 
 # Use this to prepare your build for testing
 # e.g. copy database configurations, environment variables, etc.
