--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ perl:
 before_install:
   - sudo apt-get update
   - sudo apt-get autoremove
+  - sudo apt-get install libdb4.7-dev
   - sudo apt-get install emboss
   - sudo apt-get install bedtools
   - sudo apt-get install libgd3
