--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,9 @@ before_script: true
 script:
   - ./INSTALL.pl
   - travis_wait ./ProphET_standalone.pl --fasta test.fasta --gff_in test.gff --outdir test
-  - diff -r test expected_output_of_test | wc
+  - diff -r test/NC_005362.1.phage_1.fas expected_output_of_test/NC_005362.1.phage_1.fas | wc
+  - diff -r test/NC_005362.1.phage_2.fas expected_output_of_test/NC_005362.1.phage_2.fas | wc  
+  - diff -r test/phages_coords expected_output_of_test/phages_coords
 
 after_success: true
 
