--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
   - cpanm Bio::Graphics
   - cpanm LWP::Simple
   - cpanm XML::Simple
+  - cpanm Mozilla::CA
 
 # Use this to prepare your build for testing
 # e.g. copy database configurations, environment variables, etc.
