--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - sudo apt-get install libdb5.3++-dev
   - sudo apt-get install emboss
   - sudo apt-get install bedtools
-  - sudo apt-get install ncbi-blast
+  - sudo apt-get install ncbi-blast+-legacy
   - sudo apt-get install libgd3
   - sudo apt-get install libgd-dev
   - sudo apt-get install libgd-perl  
