--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,7 @@ before_install:
   - sudo apt-get install libgd-svg-perl
   - sudo wget ftp://ftp.ncbi.nlm.nih.gov/blast/executables/legacy.NOTSUPPORTED/2.2.26/blast-2.2.26-x64-linux.tar.gz
   - sudo tar -xvzf blast-2.2.26-x64-linux.tar.gz
-  - sudo ln -s blast-2.2.26/bin/blastall /bin/blastall
-  - sudo ln -s blast-2.2.26/bin/formatdb /bin/formatdb
-  
-
+  - PATH=$PATH:`pwd`/blast-2.2.26/bin
   
 
 
