--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
   - sudo wget ftp://ftp.ncbi.nlm.nih.gov/blast/executables/legacy.NOTSUPPORTED/2.2.26/blast-2.2.26-x64-linux.tar.gz
   - sudo tar -xvzf blast-2.2.26-x64-linux.tar.gz
   - PATH=$PATH:`pwd`/blast-2.2.26/bin
+  - echo $PATH
   
 
 
